--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@ fastapi==0.115.0
 uvicorn[standard]==0.30.6
 gunicorn==21.2.0
 python-multipart==0.0.9
-pydantic>=2.5
+pydantic[email]>=2.5
+email-validator==2.1.0.post1
